--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/pixyll"]
-	path = themes/pixyll
-	url = https://github.com/azmelanar/hugo-theme-pixyll.git
+[submodule "themes/terminal"]
+    path = themes/terminal
+    url = https://github.com/panr/hugo-theme-terminal.git
